[tool.poetry]
name = "mwc-pedprog-unit02-lab01"
version = "0.1.0"
description = ""
authors = ["Chris Proctor <github.com@accounts.chrisproctor.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
